--- a/index.html
+++ b/index.html
@@ -172,56 +172,69 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300" />
+          <img
+            class="img-polaroid"
+            alt="Placeholder"
+            src="http://placehold.it/480x300" />
         </div>
 
         <!-- We define a new 'actions' div to contain statistics,
         order, and share buttons. -->
         <div class="span5 actions">
-          <div class="span8 offset2">
-            <div class="statistics">
-              <div class="span4">
-                <!-- linediv-l and linediv-r give dividing lines that
-                look different in horizontal and vertical layouts,
-                illustrating media queries. -->
-                <div class="linediv-l">
-                  <h3>0</h3> <p>supporters</p>
+          <div class="row-fluid">
+            <div class="span8 offset2">
+              <div class="row-fluid statistics">
+                <div class="span4">
+                  <!-- linediv-l and linediv-r give dividing lines that
+                  look different in horizontal and vertical layouts,
+                  illustrating media queries. -->
+                  <div class="linediv-l">
+                    <h3>0</h3> <p>supporters</p>
+                  </div>
                 </div>
-              </div>
-              <div class="span4">
-                <div class="linediv-c">
-                  <h3>$0</h3> <p>of $200</p>
+                <div class="span4">
+                  <div class="linediv-c">
+                    <h3>$0</h3> <p>of $200</p>
+                  </div>
                 </div>
-              </div>
-              <div class="span4">
-                <div class="linediv-r">
-                  <h3>10</h3> <p>days left</p>
+                <div class="span4">
+                  <div class="linediv-r">
+                    <h3>10</h3> <p>days left</p>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="span10 offset1">
-            <!-- Bootstrap progress bar -->
-            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
-            <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%"></div>
-              <div class="bar bar-warning" style="width: 40%"></div>
+            <div class="row-fluid">
+              <div class="span10 offset1">
+                <!-- Bootstrap progress bar --> <!--
+                http://twitter.github.io/bootstrap/components.html#progress
+                -->
+                <div class="thermometer progress active">
+                  <div class="bar bar-success" style="width: 60%"></div>
+                  <div class="bar bar-warning" style="width: 40%"></div>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Donate</button>
-          </div>
-          <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter">
-              <i class="icon-twitter"></i> | Twitter
-            </button>
-            <button class="btn btn-facebook">
-              <i class="icon-facebook"></i> | Facebook
-            </button>
+            <div class="row-fluid">
+              <div class="span6 offset3 order">
+                <!-- Standard Bootstrap button. --> <!--
+                http://twitter.github.io/bootstrap/base-css.html#buttons -->
+                <button class="btn btn-success btn-large">Donate</button>
+              </div>
+            </div>
+            <div class="row-fluid">
+              <div class="span8 offset2 social">
+                <!-- Social buttons are not included in default Bootstrap.
+                --> <!-- See: http://noizwaves.github.io/bootstrap-social-
+                buttons -->
+                <button class="btn btn-twitter">
+                  <i class="icon-twitter"></i> | Twitter
+                </button>
+                <button class="btn btn-facebook">
+                  <i class="icon-facebook"></i> | Facebook
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -232,7 +245,11 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300" />
+          <img
+            class="img-polaroid"
+            src="http://placehold.it/480x300"
+            alt="Placeholder"
+            />
         </div>
         <div class="span5 copy">
           <p>
@@ -265,7 +282,11 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300" />
+          <img
+            class="img-polaroid"
+            src="http://placehold.it/480x300"
+            alt="Placeholder"
+            />
         </div>
       </div>
 
